Fix [Jobs] Chips overflows table

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -11,29 +11,36 @@
   width: 100%;
   border-top: $secondaryBorder;
 
+  &-cell {
+    &-1 {
+      flex: 1 0 0%;
+    }
+
+    &-2 {
+      flex: 2 0;
+    }
+
+    &-3 {
+      flex: 3 0;
+    }
+
+    &-4 {
+      flex: 4 0;
+    }
+
+    &-5 {
+      flex: 5 0;
+    }
+
+    &-small {
+      flex: 1 0 auto;
+      max-width: 90px;
+    }
+  }
+
   &__content {
     width: 100%;
     height: 100%;
-
-    .table-cell-1 {
-      flex: 1 1;
-    }
-
-    .table-cell-2 {
-      flex: 2 1;
-    }
-
-    .table-cell-3 {
-      flex: 3 1;
-    }
-
-    .table-cell-4 {
-      flex: 4 1;
-    }
-
-    .table-cell-5 {
-      flex: 5 1;
-    }
 
     [class*='table-cell-'] {
       min-width: 70px;
@@ -131,7 +138,6 @@
       @include tableDet;
       @include tableHeader(5px);
 
-      flex: 1;
       height: 50px;
       line-height: 18px;
 
