--- a/src/elements/TableLinkCell/tableLinkCell.scss
+++ b/src/elements/TableLinkCell/tableLinkCell.scss
@@ -6,7 +6,6 @@
     flex: 1;
     flex-wrap: wrap;
     align-items: center;
-    max-width: 200px;
 
     .item {
       &-name {
